--- a/package.json
+++ b/package.json
@@ -12,22 +12,19 @@
   "files": [
     "index.js"
   ],
-  "devDependencies": {
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^5.12.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
-    "eslint-plugin-react-native": "^3.7.0",
-    "typescript": "^3.3.3333"
+    "eslint-plugin-react-native": "^3.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "typescript": "^3.2.1"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^5.12.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "eslint-plugin-react-native": "^3.7.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.2.1"
   }
 }
