--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@typescript-eslint/parser": "^2.7.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.0.1",
-    "eslint-plugin-react-native": "^3.8.1"
+    "eslint-plugin-react-native": "^3.8.1",
+    "eslint-plugin-tsdoc": "0.2.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
-    "eslint-plugin-tsdoc": "0.2.0",
     "typescript": "^3.2.1"
   },
   "peerDependencies": {
