--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/experimental-utils": "^2.6.1",
     "@typescript-eslint/parser": "^2.3.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
