--- a/package.json
+++ b/package.json
@@ -7,21 +7,26 @@
   "license": "Apache-2.0",
   "scripts": {
     "print": "eslint --config index.js --print-config index.js",
-    "test": "eslint --config index.js index.js"
+    "lint": "eslint --config index.js index.js",
+    "test": "jest"
   },
   "files": [
     "index.js"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/experimental-utils": "^2.6.1",
-    "@typescript-eslint/parser": "^2.3.1",
+    "@typescript-eslint/experimental-utils": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "eslint-plugin-react-native": "^3.7.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.25",
+    "@types/node": "^13.1.5",
     "eslint": "^6.1.0",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.3.0",
     "typescript": "^3.2.1"
   },
   "peerDependencies": {
