--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "index.js"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-react-native": "^3.8.1",
-    "eslint-plugin-tsdoc": "0.2.0"
+    "@typescript-eslint/eslint-plugin": "2.17.0",
+    "@typescript-eslint/parser": "2.17.0",
+    "eslint-plugin-react": "7.18.0",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-react-native": "3.8.1",
+    "eslint-plugin-tsdoc": "0.2.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
