--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
-  "name": "@oursky/eslint-config",
-  "version": "1.6.0",
-  "main": "index.js",
+  "name": "@oursky/eslint-plugin",
+  "version": "2.0.0",
+  "main": "dist/index.js",
   "repository": "git@github.com:oursky/eslint-oursky.git",
   "author": "<louischan@oursky.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "print": "eslint --config index.js --print-config index.js",
-    "test": "eslint --config index.js index.js"
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write --list-different 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "files": [
-    "index.js"
+    "dist"
   ],
   "dependencies": {
+    "@typescript-eslint/experimental-utils": "2.17.0",
+    "core-js": "3.6.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.8.3",
+    "@babel/core": "7.8.3",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-transform-typescript": "7.8.3",
+    "@babel/preset-env": "7.8.3",
+    "@rollup/plugin-commonjs": "11.0.1",
+    "@rollup/plugin-json": "4.0.1",
+    "@rollup/plugin-node-resolve": "7.0.0",
+    "builtins": "3.0.0",
+    "eslint": "6.8.0",
+    "prettier": "1.19.1",
+    "rollup": "1.29.1",
+    "rollup-plugin-babel": "4.3.3",
+    "typescript": "3.7.5",
     "@typescript-eslint/eslint-plugin": "2.17.0",
     "@typescript-eslint/parser": "2.17.0",
     "eslint-plugin-react": "7.18.0",
@@ -20,12 +38,14 @@
     "eslint-plugin-react-native": "3.8.1",
     "eslint-plugin-tsdoc": "0.2.1"
   },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "typescript": "^3.2.1"
-  },
   "peerDependencies": {
     "eslint": "^6.8.0",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react-native": "^3.8.1",
+    "eslint-plugin-tsdoc": "0.2.1"
   }
 }
