--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,15 @@
 {
+  "include": ["src/**/*"],
   "compilerOptions": {
     "target": "ES5",
-    "module": "commonjs",
-    "lib": [
-      "ES5",
-      "ES2015.Promise",
-      "ES2015.Collection",
-      "ES2016.Array.Include"
-    ],
+    "module": "ES2015",
+    "moduleResolution": "Node",
+    "lib": ["ES5", "ES2015.Promise", "ES2015.Collection", "ES2015.Iterable"],
+    "types": [],
     "jsx": "React",
-    "noEmit": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "resolveJsonModule": true
   }
 }
