--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "dist"
   ],
   "dependencies": {
-    "@typescript-eslint/experimental-utils": "2.29.0",
-    "core-js": "3.6.5"
+    "@typescript-eslint/experimental-utils": "2.34.0",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
+    "core-js": "3.6.5",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.2",
+    "eslint-plugin-react-native": "3.8.1",
+    "eslint-plugin-tsdoc": "0.2.4"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -28,26 +34,13 @@
     "@rollup/plugin-json": "4.0.3",
     "@rollup/plugin-node-resolve": "7.1.3",
     "builtins": "3.0.1",
-    "eslint": "6.8.0",
+    "eslint": "7.0.0",
     "prettier": "2.0.5",
     "rollup": "2.10.5",
     "rollup-plugin-babel": "4.4.0",
-    "typescript": "3.9.3",
-    "@typescript-eslint/eslint-plugin": "2.29.0",
-    "@typescript-eslint/parser": "2.29.0",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-react-native": "3.8.1",
-    "eslint-plugin-tsdoc": "0.2.4"
+    "typescript": "3.9.3"
   },
   "peerDependencies": {
-    "eslint": "^6.8.0",
-    "typescript": "^3.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-react-native": "^3.8.1",
-    "eslint-plugin-tsdoc": "0.2.4"
+    "eslint": "^7"
   }
 }
