--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@oursky/eslint-plugin",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "main": "dist/index.js",
   "repository": "git@github.com:oursky/eslint-oursky.git",
   "author": "<louischan@oursky.com>",
   "license": "Apache-2.0",
   "scripts": {
     "prepublishOnly": "rollup --config rollup.config.js",
-    "test": "cd test && npm test",
+    "test": "cd test && npm ci && npm test",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write --list-different 'src/**/*.{js,jsx,ts,tsx}'"
   },
