--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "prepublishOnly": "rollup --config rollup.config.js",
-    "test": "cd test && npm ci && npm test",
+    "test": "npm run prepublishOnly && cd test && npm ci && npm test",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write --list-different 'src/**/*.{js,jsx,ts,tsx}'"
   },
