--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -11,5 +11,8 @@
   "parserOptions": {
     "sourceType": "module",
     "project": "./tsconfig.json"
+  },
+  "env": {
+    "browser": true
   }
 }
