--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-transform-typescript": "7.13.0",
     "@babel/preset-env": "7.13.12",
-    "@rollup/plugin-commonjs": "15.0.0",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "18.0.0",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "9.0.0",
-    "builtins": "3.0.1",
+    "@rollup/plugin-node-resolve": "11.2.1",
+    "builtins": "4.0.0",
     "eslint": "7.8.1",
     "prettier": "2.2.1",
     "rollup": "2.44.0",
-    "rollup-plugin-babel": "4.4.0",
     "typescript": "4.2.4"
   },
   "peerDependencies": {
