--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "<louischan@oursky.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "prepublishOnly": "rollup --config rollup.config.js",
+    "prepublishOnly": "return 1",
     "test": "npm run prepublishOnly && cd test && npm ci && npm test",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write --list-different 'src/**/*.{js,jsx,ts,tsx}'"
@@ -24,18 +24,8 @@
     "eslint-plugin-tsdoc": "^0.2.14"
   },
   "devDependencies": {
-    "@babel/cli": "7.17.6",
-    "@babel/core": "7.17.8",
-    "@babel/plugin-transform-typescript": "7.16.8",
-    "@babel/preset-env": "7.16.11",
-    "@rollup/plugin-babel": "5.3.1",
-    "@rollup/plugin-commonjs": "21.0.2",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "builtins": "4.1.0",
     "eslint": "8.11.0",
     "prettier": "2.6.0",
-    "rollup": "2.70.1",
     "typescript": "4.6.2"
   },
   "peerDependencies": {
