--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@oursky/eslint-plugin",
   "version": "8.0.0",
+  "source": "src/index.js",
   "main": "dist/index.js",
   "repository": "git@github.com:oursky/eslint-oursky.git",
   "author": "<louischan@oursky.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "prepublishOnly": "return 1",
+    "prepublishOnly": "parcel build",
     "test": "npm run prepublishOnly && cd test && npm ci && npm test",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write --list-different 'src/**/*.{js,jsx,ts,tsx}'"
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "eslint": "8.11.0",
+    "parcel": "2.7.0",
     "prettier": "2.6.0",
     "typescript": "4.6.2"
   },
