--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/experimental-utils": "^5.34.0",
+    "@typescript-eslint/utils": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
