--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@oursky/eslint-plugin",
   "version": "10.0.0",
   "source": "src/index.mjs",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "repository": "git@github.com:oursky/eslint-oursky.git",
   "author": "<louischan@oursky.com>",
@@ -12,7 +12,7 @@
     "prepublishOnly": "npm run build",
     "test": "npm run prepublishOnly && cd test && npm ci && npm test",
     "typecheck": "tsc --noEmit",
-    "format": "prettier --write --list-different 'src/**/*.{js,jsx,ts,tsx}'"
+    "format": "prettier --write --list-different 'src/**/*.{cjs,mjs,js,jsx,ts,tsx}'"
   },
   "files": [
     "dist"
