--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "ES2015",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     // typescript-eslint is written against ES2017 while our codebase is written against "lib".
     // When they introduce something that is only available in ES2017, typechecking their code will definitely fail.
     // Therefore, we skip typechecking *.d.ts with skipLibCheck.
