--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/utils": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@typescript-eslint/utils": "^6.5.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-sonarjs": "0.21.0",
     "eslint-plugin-tsdoc": "^0.2.17"
   },
   "devDependencies": {
