--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "@typescript-eslint/utils": "^6.5.0",
-    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-sonarjs": "0.21.0",
     "eslint-plugin-tsdoc": "^0.2.17"
   },
   "devDependencies": {
-    "eslint": "8.48.0",
+    "@oursky/eslint-plugin": "13.1.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "parcel": "2.9.3",
     "prettier": "3.0.3",
     "typescript": "5.2.2"
