--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "dist"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "@typescript-eslint/utils": "^6.5.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.0.0",
-    "eslint-plugin-sonarjs": "0.21.0",
-    "eslint-plugin-tsdoc": "^0.2.17"
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "@typescript-eslint/utils": "^7.12.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "eslint-plugin-sonarjs": "^1.0.3",
+    "eslint-plugin-tsdoc": "^0.3.0"
   },
   "devDependencies": {
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "parcel": "2.12.0",
     "prettier": "3.3.1",
     "typescript": "5.4.5"
   },
   "peerDependencies": {
-    "eslint": "^8.48.0"
+    "eslint": "^8.57.0"
   }
 }
