Work around `npm build` may result in a stale build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "<louischan@oursky.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "parcel build",
+    "build": "parcel build --no-cache",
     "prepublishOnly": "npm run typecheck && npm run format && npm run test",
     "test": "npm run build && cd test && npm ci && npm test",
     "typecheck": "tsc --noEmit",
