Run CI on a fixed version of node 20

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,18 +4,12 @@ on: ["push", "pull_request"]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # On Node 14, we got the following error on CI
-        # npm ERR! @typescript-eslint/utils not accessible from @oursky/eslint-plugin
-        node-version: [16.x]
+    runs-on: ubuntu-24.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version-file: "./.tool-versions"
     - run: npm ci
     - run: make check-rules-are-up-to-date
     - run: make check-all-rules-are-considered
