--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   },
   "devDependencies": {
     "eslint": "8.57.0",
-    "parcel": "2.12.0",
-    "prettier": "3.3.1",
-    "typescript": "5.4.5"
+    "parcel": "^2.12.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2"
   },
   "peerDependencies": {
     "eslint": "^8.57.0"
