--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "dist"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "@typescript-eslint/utils": "7.18.0",
+    "typescript-eslint": "8.0.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-native": "^4.1.0",
@@ -28,12 +26,13 @@
     "eslint-plugin-tsdoc": "^0.3.0"
   },
   "devDependencies": {
-    "eslint": "8.57.1",
+    "@eslint/js": "9.0.0",
+    "eslint": "9.0.0",
     "parcel": "^2.12.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
-    "eslint": "^8.57.1"
+    "eslint": "^9.0.0"
   }
 }
