--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "@oursky/eslint-plugin",
   "version": "14.1.0",
-  "source": "src/index.mjs",
   "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
   "repository": "git@github.com:oursky/eslint-oursky.git",
   "author": "<louischan@oursky.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "parcel build --no-cache",
+    "build": "rollup --config",
     "prepublishOnly": "npm run typecheck && npm run format && npm run test",
     "test": "npm run build && cd test && npm ci && npm test",
     "typecheck": "tsc --noEmit",
@@ -18,18 +16,19 @@
     "dist"
   ],
   "dependencies": {
-    "typescript-eslint": "8.0.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-sonarjs": "^1.0.4",
-    "eslint-plugin-tsdoc": "^0.3.0"
+    "eslint-plugin-tsdoc": "^0.3.0",
+    "typescript-eslint": "8.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.0",
     "@eslint/js": "9.0.0",
     "eslint": "9.0.0",
-    "parcel": "^2.12.0",
     "prettier": "^3.3.3",
+    "rollup": "^4.24.0",
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
