--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.0",
-    "@eslint/js": "9.11.0",
-    "eslint": "9.11.0",
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
     "prettier": "^3.3.3",
     "rollup": "^4.24.0",
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
-    "eslint": "9.11.0"
+    "eslint": "^9.12.0"
   }
 }
