--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,13 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version-file: "./.tool-versions"
-    - run: npm ci
+    # We need to add --legacy-peer-deps because
+    # eslint-plugin-tsdoc
+    # eslint-plugin-react-native
+    # eslint-plugin-react-hooks
+    # They do not officially support eslint 9
+    # We make them compatible with eslint 9 with @eslint/compat
+    - run: npm ci --legacy-peer-deps
     - run: make print-all-rules
     - run: make check-all-rules-are-considered
     - run: npm run format
