--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rollup --config",
     "prepublishOnly": "npm run format && npm run test",
-    "test": "npm run build && cd test && npm ci && npm test",
+    "test": "./scripts/test.sh",
     "format": "prettier --write --list-different 'src/**/*.{cjs,mjs,js,jsx,ts,tsx}'"
   },
   "files": [
